# proveno

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  demo-bounty-local.sh  demo-bounty.sh  demo-noir-e2e-fixed.sh  demo-noir-e2e-local.sh  demo-noir-e2e.sh  zkvm-prove.sh
.claude/: settings.json
.claude/rules/: commits.md  pull-requests.md  review-gate.md  testing.md
bench/: run.py
bench/tasks/01_price_lookup/: trace_proveno.json
bench/tasks/02_search_filter/: trace_proveno.json
bench/tasks/03_chained_lookup/: trace_proveno.json
compiler/: Cargo.toml
compiler/src/: main.rs
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Bounty.sol  HonkVerifier.sol  IOpenVmVerifier.sol  LuaiConsumer.sol  LuaiVerifier.sol  OpenVmGroth16Verifier.sol  ProvenoConsumer.sol  ProvenoVerifier.sol  StubOpenVmVerifier.sol  Types.sol
contracts/test/: Bounty.t.sol  LuaiConsumer.t.sol  LuaiVerifier.t.sol  OpenVmGroth16Verifier.t.sol  ProvenoConsumer.t.sol  ProvenoVerifier.t.sol
contracts/test/fixtures/: README.md  public_inputs.json
demo-server/: Cargo.toml
demo-server/src/: events.rs  lib.rs  main.rs
demo-server/tests/: integration.rs
docs/: canonical-serialization.md  stack-semantics-constraint.md  tls-attestation.md
examples/: bench_speed.rs  eth-price-prove.sh  eth_price.lua  large-response-langchain.py  large-response-processing.sh  multichain-score-langchain.py  multichain-score-wallet.sh  prover.lua  score-wallet-langchain.py  score-wallet.sh  tls_test.lua  usdc_depeg.lua
luai-noir/: Cargo.toml
luai-noir/src/: lib.rs  main.rs  prover.rs  witness.rs
luai-noir/tests/: parity.rs  prove.rs
noir/: Nargo.toml
noir/src/: main.nr
openvm/: Cargo.toml  openvm.toml  proof-app.sh
openvm/src/: encoder.rs  main.rs
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs  llm.rs  main.rs  pipeline.rs  prompt.rs  prove.rs  tls_capture.rs  tools.rs
planning/: agent-prompts.md  noir-proving-pipeline-agent-prompts.md  noir-proving-pipeline-plan.md  phase3-benchmarks.md  programmable-oracle-mvp-agent-plan.md  programmable-oracle-mvp-plan.md  zk-wiring-agent-prompts.md
proveno-demo/: CLAUDE.md  Cargo.toml
proveno-demo/src/: chain.rs  events.rs  lib.rs  main.rs  public_inputs.rs  runner.rs
proveno-demo/static/: app.js  index.html  style.css
proveno-demo/tests/: integration.rs
proveno-noir/: Cargo.toml
proveno-noir/src/: lib.rs  main.rs  prover.rs  verifier.rs  witness.rs
proveno-noir/tests/: parity.rs  prove.rs
prover/: Cargo.toml
prover/src/: host.rs  main.rs  prover.rs
src/: lib.rs  main.rs
src/bytecode/: mod.rs  verifier.rs
src/compiler/: codegen.rs  error.rs  mod.rs  proto.rs
src/host/: canonicalize.rs  mod.rs  poseidon2.rs  tape.rs  tls_attestation.rs  tool_registry.rs  transcript.rs
src/noir/: encoder.rs  mod.rs  opcodes.rs  trace.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/policy/: mod.rs  profiles.rs
src/tls/: mod.rs  verify.rs
src/types/: table.rs  value.rs
src/vm/: builtins.rs  engine.rs  memory.rs  mod.rs
src/zkvm/: commitment.rs  der_parser.rs  dry_run_result.rs  guest_input.rs  mod.rs  tls_verify.rs
tests/: builtins.rs  compiler.rs  integration.rs  json.rs  noir_trace.rs  policy.rs  tools.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
verifier/tests/: verifier.rs
