[package]
name = "luai"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["compiler","openvm","orchestrator","prover"]
resolver = "2"

[features]
default = ["std"]
std = []
zkvm = []

[dependencies]
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
x509-cert = "0.2"
