[package]
name = "luai"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["compiler","openvm","orchestrator","prover"]
resolver = "2"

[features]
default = ["std"]
std = []
zkvm = []

[dependencies]
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
serde = { version = "1", features = ["derive"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
x509-cert = { version = "0.2", default-features = false }
webpki-roots = { version = "0.26" }
# RSA signature verification for cert chains where intermediate/root CAs use RSA
rsa = { version = "0.9", default-features = false }

[dev-dependencies]
serde_json = "1"
rustls = { version = "0.23", features = ["std"] }
