[package]
name = "luai"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["compiler","openvm","orchestrator","prover","verifier","luai-noir"]
resolver = "2"

[features]
default = ["std"]
std = ["dep:serde_json"]
zkvm = []

[dependencies]
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
x509-cert = { version = "0.2", default-features = false }
webpki-roots = { version = "0.26" }
# RSA signature verification for cert chains where intermediate/root CAs use RSA
rsa = { version = "0.9", default-features = false }
# Poseidon2 hashing for Noir-circuit-friendly commitments.
# Pulls in the noir-lang acir/acvm ecosystem; this breaks no_std/zkvm builds
# (OpenVM is out of scope for the current migration).
acir = "0.46"
bn254_blackbox_solver = "0.46"

[dev-dependencies]
serde_json = "1"
rustls = { version = "0.23", features = ["std"] }
