[package]
name = "luai-openvm"
version = "0.1.0"
edition = "2024"

[dependencies]
luai = { path = "..", default-features = false, features = ["zkvm", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
luai_prover = { path = "../prover" }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", features = ["std"] }
hex = "0.4.3"
# P-256 ECDSA signature verification (no_std compatible)
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
# X.509 certificate chain parsing (std binary — use default features)
x509-cert = "0.2"
# Mozilla root CA trust anchors (no_std, static data)
webpki-roots = "0.26"

[[bin]]
name = "luai-openvm"
path = "src/main.rs"

[[bin]]
name = "luai-openvm-encoder"
path = "src/encoder.rs"
