[package]
name = "proveno-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
proveno = { path = "..", features = ["serde"] }
proveno-orchestrator = { path = "../orchestrator" }
dotenvy = "0.15"
tempfile = "3"
alloy = { version = "0.7", features = [
    "network",
    "rpc-client",
    "providers",
    "transports",
    "transport-http",
    "sol-types",
    "json-rpc",
    "contract",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hex = "0.4"
