[package]
name = "luai_prover"
version = "0.1.0"
edition = "2024"

[dependencies]
luai = { path = "..", features = ["zkvm", "serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[[bin]]
name = "luai-prover"
path = "src/main.rs"
